[gd_scene load_steps=3 format=3 uid="uid://dagqkuuipwjlv"]

[ext_resource type="Script" path="res://scripts/ui/pause.gd" id="1_m7nv1"]
[ext_resource type="FontFile" uid="uid://cwdmo3e1666lq" path="res://assets/graphics/Fonts/PrinceValiant/PrinceValiant.ttf" id="1_whyb1"]

[node name="Pause" type="Window"]
process_mode = 2
initial_position = 2
size = Vector2i(300, 250)
transient = true
exclusive = true
unresizable = true
borderless = true
script = ExtResource("1_m7nv1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 250)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_fonts/font = ExtResource("1_whyb1")
theme_override_font_sizes/font_size = 38
text = "Resume"

[node name="StartMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_fonts/font = ExtResource("1_whyb1")
theme_override_font_sizes/font_size = 38
text = "Start Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.67451, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.188235, 0.568627, 0.792157, 1)
theme_override_fonts/font = ExtResource("1_whyb1")
theme_override_font_sizes/font_size = 38
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/StartMenu" to="." method="_on_start_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
